--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <div class="square" id="7"></div>
       <div class="square" id="8"></div>
   </div>
+  <h2>EZ Game =))</h2>
   <script>
     let board = ['', '', '', '', '', '', '', '', ''];
     let human = 'X';
