--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
       transform: scale(0.9);
     }
 
-
+	/* Centered h2 tag */
+    h2 {
+      text-align: center;
+    }
   </style>
 </head>
 
@@ -69,7 +72,7 @@
       <div class="square" id="7"></div>
       <div class="square" id="8"></div>
   </div>
-  <h2>EZ Game =))</h2>
+  <h2>EZ Games =))</h2>
   <script>
     let board = ['', '', '', '', '', '', '', '', ''];
     let human = 'X';
